[package]
name = "cs544-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_protocol = { path = "../protocol"}
tic_tac_toe = { path = "../tic_tac_toe" }

[[bin]]
name="game_server"
path="main.rs"